adjust hands-on URL settings

--- a/web/ja/tutorial/handson/section01.html
+++ b/web/ja/tutorial/handson/section01.html
@@ -536,9 +536,8 @@ PROJECT_ROOT
 		<dt>password</dt><dd>maihamadb</dd>
 	</dl>
 	<p>
-		<span class="frm">
-			※urlプロパティが長いですが、"jdbc:" から "sslMode=DISABLED" まで、改行空白の無いひとつの値です。
-		</span>
+		urlプロパティが長いですが、"jdbc:" から "sslMode=DISABLED" まで、改行空白の無いひとつの値です。
+		ここでは、localhostの43376ポートのmaihamadbデータベース(スキーマ)にSSL接続OFFで接続しようとしています。
 	</p>
 	<div class="relatedpage"><a href="../../manual/reference/dfprop/databaseinfo/index.html#url">databaseInfoMap - url (*)</a></div>
 	<h4>MySQL-8.0.17以降の予約語対応</h4>
