fix broken link

--- a/web/ja/lastaflute/howto/action/lajsonapi.html
+++ b/web/ja/lastaflute/howto/action/lajsonapi.html
@@ -163,7 +163,7 @@
 		プロパティに @Required などの Validator Annotation を付けると、実際にバリデーションが実行されます。
 		この場合のバリデーションエラーは、サーバーサイドのバグやデータの不整合が想定されますので、システムエラーとして扱われます。
 	</p>
-	<div class="relatedpage"><a href="./lavalidation.html#jsonbeanvalidation">JsonResultのバリデーション</a></div>
+	<div class="relatedpage"><a href="./lavalidation.html#responsevalidation">番外. レスポンスデータのバリデーション</a></div>
 <pre><span class="codetitle">e.g. Required annotation in Result class @Java</span><code>
 <span class="keyword">public class</span> SeaLandResult {
 
