--- a/web/ja/lastaflute/howto/impldesign/jsonfaicli.html
+++ b/web/ja/lastaflute/howto/impldesign/jsonfaicli.html
@@ -362,6 +362,7 @@ errors.app.double.submit.request=<span class="literal">DOUBLE_SUBMIT</span>
 	<p>
 		メッセージをハイブリッド方式にした場合は、こんな感じでしょうか。クライアントメッセージ方式のやり方に、単に自然言語のユーザーメッセージを載せるための message を追加しています。
 	</p>
+	<div><a href="./jsonfaihy.html">JSON API, Failure統一ハイブリッドメッセージ</a></div>
 <pre><span class="codetitle">e.g. "ふぇいはいパターン" で、バリデーションエラーのとき @Json</span><code>
 {
     <span class="comment">// Failureの原因</span>
