just fix: not LastaFlute, but DBFlute

--- a/web/ja/lastaflute/howto/dbflute/appcls.html
+++ b/web/ja/lastaflute/howto/dbflute/appcls.html
@@ -306,7 +306,7 @@ src/main/resources
 		一方で、"要素セットが減りつつも独自要素が増える" ような場合は、どの refType でも表現ができません。
 		<span class="frm">(そのときは、ぜひ要望を出してください。どのくらい必要性があるのかわからないので、まだ実装していません)</span>
 	</p>
-	<h4>LastaFlute-1.2.4 まで</h4>
+	<h4>DBFlute-1.2.4 まで</h4>
 	<p>
 		通常は、<em class="mark">included</em> を使うことが多いでしょう。DB区分値の要素に加えて、固有の要素を追加するような場合などを想定しています。
 		<span class="frm">(全く同じなのであれば、そもそもアプリ区分値を作る必要性がないので)</span>
