--- a/web/ja/manual/function/helper/utflute/setup.html
+++ b/web/ja/manual/function/helper/utflute/setup.html
@@ -49,7 +49,7 @@
     &lt;dependency&gt;
       &lt;groupId&gt;<span class="literal">org.dbflute.utflute</span>&lt;/groupId&gt;
       &lt;artifactId&gt;<span class="point">utflute-lastaflute</span>&lt;/artifactId&gt;
-      &lt;version&gt;<span class="literal">0.7.4</span>&lt;/version&gt;
+      &lt;version&gt;<span class="literal">0.9.2</span>&lt;/version&gt;
       &lt;scope&gt;test&lt;/scope&gt;
     &lt;/dependency&gt;
 </code></pre>
@@ -57,7 +57,7 @@
     &lt;dependency&gt;
       &lt;groupId&gt;<span class="literal">org.dbflute.utflute</span>&lt;/groupId&gt;
       &lt;artifactId&gt;<span class="point">utflute-spring</span>&lt;/artifactId&gt;
-      &lt;version&gt;<span class="literal">0.7.4</span>&lt;/version&gt;
+      &lt;version&gt;<span class="literal">0.9.2</span>&lt;/version&gt;
       &lt;scope&gt;test&lt;/scope&gt;
     &lt;/dependency&gt;
 </code></pre>
@@ -65,7 +65,7 @@
     &lt;dependency&gt;
       &lt;groupId&gt;<span class="literal">org.dbflute.utflute</span>&lt;/groupId&gt;
       &lt;artifactId&gt;<span class="point">utflute-guice</span>&lt;/artifactId&gt;
-      &lt;version&gt;<span class="literal">0.7.4</span>&lt;/version&gt;
+      &lt;version&gt;<span class="literal">0.9.2</span>&lt;/version&gt;
       &lt;scope&gt;test&lt;/scope&gt;
     &lt;/dependency&gt;
 </code></pre>
@@ -73,7 +73,7 @@
     &lt;dependency&gt;
       &lt;groupId&gt;<span class="literal">org.dbflute.utflute</span>&lt;/groupId&gt;
       &lt;artifactId&gt;<span class="point">utflute-seasar</span>&lt;/artifactId&gt;
-      &lt;version&gt;<span class="literal">0.7.4</span>&lt;/version&gt;
+      &lt;version&gt;<span class="literal">0.9.2</span>&lt;/version&gt;
       &lt;scope&gt;test&lt;/scope&gt;
     &lt;/dependency&gt;
 </code></pre>
@@ -90,7 +90,7 @@
     &lt;dependency&gt;
       &lt;groupId&gt;org.dbflute.utflute&lt;/groupId&gt;
       &lt;artifactId&gt;utflute-spring<span class="point">-web</span>&lt;/artifactId&gt;
-      &lt;version&gt;<span class="literal">0.7.4</span>&lt;/version&gt;
+      &lt;version&gt;<span class="literal">0.9.2</span>&lt;/version&gt;
       &lt;scope&gt;test&lt;/scope&gt;
     &lt;/dependency&gt;
 </code></pre>
@@ -98,7 +98,7 @@
     &lt;dependency&gt;
       &lt;groupId&gt;org.dbflute.utflute&lt;/groupId&gt;
       &lt;artifactId&gt;utflute-guice<span class="point">-web</span>&lt;/artifactId&gt;
-      &lt;version&gt;<span class="literal">0.7.4</span>&lt;/version&gt;
+      &lt;version&gt;<span class="literal">0.9.2</span>&lt;/version&gt;
       &lt;scope&gt;test&lt;/scope&gt;
     &lt;/dependency&gt;
 </code></pre>
@@ -110,23 +110,23 @@
 	<h2 id="implready">実装環境の準備 <span class="frm">(DI利用想定)</span></h2>
 	<h3 id="extends">スーパークラスの作成と継承</h3>
 	<p>
-		ContainerTestCase というクラスが用意されています。DIコンテナを利用するテストケースでは、このクラスを継承します。
+		[Web]ContainerTestCase というクラスが用意されています。DIコンテナを利用するテストケースでは、このクラスを継承します。
+		<span class="frm">(webに依存したプロジェクトであれば、クラス名に Web が付いた方を)</span>
+	</p>
+	<p>
 		こうすることで、テストケース起動時にDIコンテナが起動して、inject()が利用できるようになります。<span class="frm">(後述のDI設定が必要です)</span>
 	</p>
 	<p>
 		そのプロジェクト独自に、設定や挙動を変更するために、ContainerTestCaseを継承したプロジェクト独自のスーパークラスを用意することが推奨されます。
-		例えば、UnitContainerTestCase, Unit[プロジェクト名]ContainerTestCase というような名前が習慣です。
+		例えば、UnitContainerTestCase, Unit[プロジェクト名]TestCase というような名前が慣習です。
 	</p>
-<pre><span class="codetitle">e.g. 独自のスーパークラスを作成、DI設定を変えたり @Java</span><code>
-<span class="keyword">public abstract class</span> UnitContainerTestCase <span class="keyword">extends</span> <span class="point">ContainerTestCase</span> {
+<pre><span class="codetitle">e.g. 独自のスーパークラスを作成、WebContainerTestCaseを継承 @Java</span><code>
+<span class="keyword">public abstract class</span> UnitContainerTestCase <span class="keyword">extends</span> <span class="point">WebContainerTestCase</span> {
 
-    @Override
-    <span class="keyword">protected</span> String prepareConfigFile() { <span class="comment">// これは Seasar の場合</span>
-        <span class="keyword">return</span> <span class="literal">"test_app.dicon"</span>; <span class="comment">// テスト用のdiconを読み込むように変更</span>
-    }
+    <span class="comment">// もし、プロジェクト独自に設定などを調整する場合はここでオーバーライドするなど</span>
 }
 </code></pre>
-<pre><span class="codetitle">e.g. ContainerTestCaseを継承してDIを利用できるように @Java</span><code>
+<pre><span class="codetitle">e.g. UnitContainerTestCaseを継承してDIを利用できるように @Java</span><code>
 <span class="keyword">public class</span> FooActionTest <span class="keyword">extends</span> <span class="point">UnitContainerTestCase</span> {
 
     <span class="keyword">public void</span> test_index_basic() {
@@ -264,7 +264,7 @@
     &lt;dependency&gt;
       &lt;groupId&gt;org.dbflute.utflute&lt;/groupId&gt;
       &lt;artifactId&gt;<span class="point">utflute-core</span>&lt;/artifactId&gt;
-      &lt;version&gt;0.7.4&lt;/version&gt;
+      &lt;version&gt;0.9.2&lt;/version&gt;
     &lt;/dependency&gt;
 </code></pre>
 	<p>
