small fix: text

--- a/web/ja/lastaflute/howto/dbflute/appcls.html
+++ b/web/ja/lastaflute/howto/dbflute/appcls.html
@@ -326,7 +326,7 @@ src/main/resources
 	</dl>
 	<p>
 		まず、どのrefTypeでもカスタマイズ属性を定義できるので、それでどのrefTypeを使うか？を気にする必要はほとんどありません。
-		<span class="frm">(カスタマイズ属性が多いか少ないかで、やりやすいさの違いはあるかもしれませんが)</span>
+		<span class="frm">(カスタマイズ属性が多いか少ないかで、やりやすさの違いはあるかもですが)</span>
 	</p>
 	<p>
 		ゆえに、アプリ区分値で定義したい要素セットが参照先の区分値に対して増える？減る？同じ？で考えても良いでしょう。
